fix overflowing error message

--- a/age-calculator-app/style.css
+++ b/age-calculator-app/style.css
@@ -66,7 +66,7 @@ main {
 }
 
 .input-item input {
-  max-width: 110px;
+  max-width: 92px;
   font-size: 1.125rem;
   padding: 12px;
   border: 1px solid var(--clr-light-grey);
@@ -87,7 +87,7 @@ main {
 
 .error-message {
   color: var(--clr-red);
-  font-size: 0.6rem;
+  font-size: 0.5rem;
   font-style: italic;
   position: absolute;
   bottom: -1.25rem;
@@ -138,7 +138,7 @@ input[type="image"]:active {
   color: var(--clr-purple);
 }
 
-@media (width >= 1024px) {
+@media (width >= 768px) {
   main {
     grid-template-columns: 5fr 1fr;
     padding: 3rem 2rem;
@@ -156,6 +156,9 @@ input[type="image"]:active {
   }
   input[type="image"] {
     margin-right: 0;
+  }
+  .error-message {
+    font-size: 0.6rem;
   }
   .results-container span {
     font-size: 5rem;
